# ha-pecron-local

./: README.md  hacs.json  pyproject.toml
custom_components/pecron_local/: __init__.py  cloud_auth.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  protocol.py  select.py  sensor.py  strings.json  switch.py
custom_components/pecron_local/transport/: base.py  ble.py  tcp.py
docs/superpowers/specs/: 2026-05-29-pecron-local-ha-integration-design.md
tests/: conftest.py  test_ble_transport.py  test_cloud_auth.py  test_config_flow.py  test_coordinator.py  test_protocol.py  test_select.py  test_sensor.py  test_switch.py  test_tcp_transport.py
